--- a/doyolab/withal.html
+++ b/doyolab/withal.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Withal サーキュラーデザインプロジェクト</title>
     <link rel="stylesheet" href="./doyolab.css/withal.css">
+    <link rel="shortcut icon" href="./images/xbp.ico">
 </head>
 <body>
     <header>
+        <logotohome>
+            <a href="../index.html"><img src="images/0_XBlogo.png" alt=""></a>
+        </logotohome>
         <h1>Withal サーキュラーデザインプロジェクト</h1>
         <nav>
             <ul>
@@ -64,15 +68,60 @@
             <div class="heading-21">
                 <h1>2024年3月</h1>
             </div>
-            <h1>B.O.Rが曲がることがわかったので本格的に製作開始</h1>
-            
+            <h1>B.O.Rを曲げられることがわかったので本格的に製作開始</h1>
+            <h1>3月上旬</h1>
+                <p>B.O.Rをウクレレの形状に曲げられるか実験。</p>
+                <img src="./images/200A73CB-2D08-4129-86C8-D4E383627DBA.JPG" alt="実験の様子">
+                <p>結果：成功</p>
+                <img src="./images/A4A2E346-D85B-4CAD-8B86-0E00793B68B3.JPG" alt="成功した様子">
+            <h1>3月中旬</h1>
+                <p>Fusion360でB.O.Rウクレレを製作すべく設計。</p>
+                <img src="./images/E6AD9F90-E1DA-40CD-B975-9EED3506F34D.JPG" alt="設計の様子"> <img src="./images/4484FF75-F7C8-40D5-B918-6835776B7049.JPG">
+                <p>Fusionのシートメタル機能に感動。スリットで押し出したものを平面に伸ばせる機能。</p>
+                <a href="https://makerslove.com/17174.html">詳しくはこちら（外部サイト）</a>
+            <h1>3月下旬</h1>
+                <p>設計したデータをレーザー加工機で出力。成功。</p>
+                <img src="./images/B2F57535-8121-4F50-BADB-6ACFA6D025DA.JPG" alt="レーザー加工機での出力"><img src="./images/0D08AD73-99EB-4CC4-B18E-62B7DBD5990A.JPG" alt="レーザー加工機での出力">
+                <p>ネック部分もB.O.Rで製作を試みるが失敗。</p>
+                <img src="./images/1E0BC5D3-F9FD-451C-B848-4B3CFEE00A06.JPG" alt="ネック部分の失敗">
+                <p>ネック部分は購入し、組み立て。</p>
+                <img src="./images/E01A1B43-4E46-4173-BF61-51B52068CCE9.JPG">
+                <img src="./images/1303EA82-E258-473C-B1B4-174A2F4B9384.JPG">
+                <p>完成</p>
+                <img src="./images/F4CDF858-DD03-410A-95B5-91E3F4B7B196.JPG">
         </article>
+        <article>
+            <div class="heading-21">
+            <h1>2024年4月</h1>
+            </div>
+            <h1>製作物発表会に向けた資料を作成しました</h1>
+            <h2>完成品</h2>
+            <iframe src="./files/素材の可能性.pdf" type="application/pdf"></iframe>
+        </article>
+        <article>
+            <div class="heading-21">
+                <h1>2024年5月</h1>
+            </div>
+            <h1>発表会</h1>
+            <p>5月10日（金）に一般社団法人繊維育英会の財間宣彰様と山田広平様をお迎えし、経営学部 道用ゼミの学生たちと本プロジェクトに関するセッションを行いました。</p>
+            <img src="./images/DSC06924.JPG"><img src="./images/DSC06928.JPG"><img src="./images/DSC06931.JPG">
+            <a href="https://www.kanagawa-u.ac.jp/news/details_27792.html">詳細はこちら（外部サイト）</a>
+            <h1>イリノイ大学交流会</h1>
+            <p>イリノイ大学でサステナブルデザインを学ぶ学生14名が、5月24日（金）にみなとみらいキャンパスを訪れ、ファブラボみなとみらいの見学とともに、経営学部道用ゼミの学生とサステナブル、サーキュラーエコノミーをテーマにした交流会を開催しました。</p>
+            <a href="https://www.kanagawa-u.ac.jp/news/details_27948.html">詳細はこちら（外部サイト）</a>
+        </article>
+            
         <!-- 他の日付の活動内容も同様に追加 -->
     </section>
+    <div class="back-to-top" onclick="scrollToTop()"><span>&#9650;ページトップへ</div>
+    <script>
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+    </script>
 
     <footer>
-        <p>&copy; 2024 神奈川大学 Withalプロジェクト. All rights reserved.</p>
-        <p><a href="https://www.kanagawa-u.ac.jp/news/details_27792.html">プロジェクトの詳細</a></p>
+        <p>&copy; KOKI AMIKURA. All rights reserved.</p>
     </footer>
 </body>
 </html>
