--- a/doyolab/SEAds.html
+++ b/doyolab/SEAds.html
@@ -41,7 +41,8 @@
 
     <section id="overview">
         <h2>概要</h2>
-        <p>このページでは、指定されたFacebookのプロフィールを表示します。</p>
+        <p>2023.4.1より始まった、ものづくりワークショップの企画・運営を行う学生団体SEAdsの紹介</p>
+        <h4><a href="https://www.seads.info/">団体公式HP</a></h4>
     </section>
 
     <section id="profile">
