--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -12,7 +12,7 @@
         <logotohome>
             <a href="../index.html"><img src="images/0_XBlogo.png" alt="ロゴ"></a>
         </logotohome>
-        <h1>横浜市と神奈川大学の官学連携、次世代DX人材育成『遊びの天才になろう！工作×プログラミングワークショップ』開催</h1>
+        <h1>横浜市と神奈川大学の官学連携、次世代DX人材育成<br>『遊びの天才になろう！工作×プログラミングワークショップ』開催</h1>
         <nav>
             <ul>
                 <li><a href="#overview">概要</a></li>
@@ -68,7 +68,6 @@
             <div class="heading-21">
                 <h1>議論内容</h1>
             </div>
-            <h3></h3>
             <h4>5月</h4>
             <p><strong>5月21日</strong>: 新しいメンバーがチャンネルに参加。</p>
             <p><strong>5月22日</strong>: 新しいメンバーがチャンネルに参加。</p>
@@ -80,8 +79,6 @@
             <h4>7月</h4>
             <p><strong>7月1日</strong>: FTG カラスバシ氏が7月31日に直前リハーサルを行う案内。</p>
             <p><strong>7月8日</strong>: [内容を追加してください]</p>
-            <h3>仮2</h3>
-            <h4>7月</h4>
             <p><strong>7月12日</strong>: U0753R1L3RB氏がWS資料のフィードバックを共有。学生への依頼事項を説明。</p>
             <p><strong>7月17日</strong>: WSの進行に関するTakehiro Hagiwara氏の相談。</p>
             <p><strong>7月22日</strong>: [内容を追加してください]</p>
