--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>横浜市と神奈川大学の官学連携、次世代DX人材育成『遊びの天才になろう！工作×プログラミングワークショップ』開催</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="./doyolab.css/mesh.css">
     <link rel="shortcut icon" href="./images/xbp.ico">
 </head>
@@ -19,6 +21,7 @@
                 <li><a href="#interview">インタビューのまとめ</a></li>
                 <li><a href="#trial-ws">トライアルWSに向けた準び（A班）</a></li>
                 <li><a href="#discussion">全体の議論</a></li>
+                <li><a href="#workshop">ワークショップ当日の様子</a></li>
             </ul>
         </nav>
     </header>
@@ -43,6 +46,7 @@
             <p><strong>5月31日</strong>: フロンテッジ金子氏が文科省のプログラミング教育に関する資料を共有。</p>
             <h3>6月</h3>
             <p><strong>6月7日</strong>: 網倉光生氏が5/31日のインタビュー内容を可視化した共起ネットワークを作成。主な課題として、MESH等のプログラミング的思考が算数や理科等の理系科目に偏ること、学校での活用が授業の域を超えないことが挙げられる。「遊び」という要素を取り入れることで、公教育では補い切れないポジションの活用方法が見出せる可能性がある。</p>
+            <img src="./images/newplot (6).png">
         </article>
     </section>
 
@@ -68,15 +72,15 @@
             <div class="heading-21">
                 <h1>議論内容</h1>
             </div>
-            <h4>5月</h4>
+            <h3>5月</h3>
             <p><strong>5月21日</strong>: 新しいメンバーがチャンネルに参加。</p>
             <p><strong>5月22日</strong>: 新しいメンバーがチャンネルに参加。</p>
             <p><strong>5月23日</strong>: 新しいメンバーがチャンネルに参加。</p>
-            <h4>6月</h4>
+            <h3>6月</h3>
             <p><strong>6月20日</strong>: 村田華蓮氏がトライアルWSに向けたスライドやエクセルの事前共有を依頼。</p>
             <p><strong>6月21日</strong>: 村田華蓮氏がフィードバックシートの共有。</p>
             <p><strong>6月23日</strong>: 城内氏が定員40組に対し81組の応募があったことを報告。タウンニュースでの報道も紹介。</p>
-            <h4>7月</h4>
+            <h3>7月</h3>
             <p><strong>7月1日</strong>: FTG カラスバシ氏が7月31日に直前リハーサルを行う案内。</p>
             <p><strong>7月8日</strong>: [内容を追加してください]</p>
             <p><strong>7月12日</strong>: U0753R1L3RB氏がWS資料のフィードバックを共有。学生への依頼事項を説明。</p>
@@ -89,15 +93,63 @@
         </article>
     </section>
 
-    <div class="back-to-top" onclick="scrollToTop()"><span>&#9650;ページトップへ</div>
-    <script>
-        function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
-    </script>
+<article>
+    <div class="heading-21">
+    <section id="workshop">
+      <h2>ワークショップ当日の様子（2024.8.3 @神奈川大学みなとみらいキャンパス）</h2>
+    </div>
+      <div class="marquee">
+          <div class="marquee-content">
+            <img src="./images/mesh/DSC07633.JPG" alt="ワークショップ1">
+            <img src="./images/mesh/DSC07639.JPG" alt="ワークショップ2">
+            <img src="./images/mesh/DSC07642.JPG" alt="ワークショップ3">
+            <img src="./images/mesh/DSC07644.JPG" alt="ワークショップ4">
+            <img src="./images/mesh/DSC07655.JPG" alt="ワークショップ5">
+            <img src="./images/mesh/DSC07662.JPG" alt="ワークショップ6">
+            <img src="./images/mesh/DSC07665.JPG" alt="ワークショップ7">
+            <img src="./images/mesh/DSC07672.JPG" alt="ワークショップ8">
+            <img src="./images/mesh/DSC07681.JPG" alt="ワークショップ9">
+            <img src="./images/mesh/DSC07684.JPG" alt="ワークショップ10">
+            <img src="./images/mesh/DSC07685.JPG" alt="ワークショップ11">
+            <img src="./images/mesh/DSC07700.JPG" alt="ワークショッ12">
+            <!-- 画像リストを繰り返す -->
+            <img src="./images/mesh/DSC07633.JPG" alt="ワークショップ1">
+            <img src="./images/mesh/DSC07639.JPG" alt="ワークショップ2">
+            <img src="./images/mesh/DSC07642.JPG" alt="ワークショップ3">
+            <img src="./images/mesh/DSC07644.JPG" alt="ワークショップ4">
+            <img src="./images/mesh/DSC07655.JPG" alt="ワークショップ5">
+            <img src="./images/mesh/DSC07662.JPG" alt="ワークショップ6">
+            <img src="./images/mesh/DSC07665.JPG" alt="ワークショップ7">
+            <img src="./images/mesh/DSC07672.JPG" alt="ワークショップ8">
+            <img src="./images/mesh/DSC07681.JPG" alt="ワークショップ9">
+            <img src="./images/mesh/DSC07684.JPG" alt="ワークショップ10">
+            <img src="./images/mesh/DSC07685.JPG" alt="ワークショップ11">
+            <img src="./images/mesh/DSC07700.JPG" alt="ワークショッ12">
+          </div>
+      </div>
+  </section>
+</article>
+<article>
+    <div class="heading-21">
+        <h3>関連リンク</h3>
+    </div>
+    <div class="reference-link">
+  <a href="https://www.kanagawa-u.ac.jp/news/details_27931.html">神奈川大学公式HP（経営学部の学生が「MESH」を活用した児童向けワークショップを開発）</a><br>
+  <a href="https://library.meshprj.com/news/20240626-yokohama-kanagawa-univ-dx-workshop">MESH公式HP（横浜市と神奈川大学の官学連携、次世代DX人材育成『遊びの天才になろう！工作×プログラミングワークショップ』開催）</a>
+</div>
+</article>
 
-    <footer>
-        <p>&copy; 2024 横浜市と神奈川大学の官学連携プロジェクト. All rights reserved.</p>
-    </footer>
+  <div class="back-to-top" onclick="scrollToTop()"><span>&#9650;ページトップへ</div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>
+      function scrollToTop() {
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+      }
+
+  </script>
+
+  <footer>
+      <p>&copy; 2024 横浜市と神奈川大学の官学連携プロジェクト. All rights reserved.</p>
+  </footer>
 </body>
 </html>
