--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -35,15 +35,18 @@
         <h2>インタビューのまとめ</h2>
         <article>
             <div class="heading-21">
-                <h1>横浜市小学校 インタビュー</h1>
+                <h1>横浜市小学校 インタビュー（2024.5.31）</h1>
             </div>
+            <p>道用ゼミ生の現代の小学生に対する解像度を向上させる為、遊びや学業など様々な視点から教職員の方々に質問させていただき、デジタル機器が身近にある小学生の解像度を上げることを目的としています。</p>
             <h3>5月</h3>
             <p><strong>5月24日</strong>: インタビューの概要が共有され、村田華蓮氏から準備の呼びかけ。インタビュー日時や場所、変更点について説明。</p>
             <p><strong>5月25日</strong>: 網倉光生氏が質問事項をGoogleスプレッドシートにまとめて共有。</p>
+            <a href="https://docs.google.com/spreadsheets/d/1Ahh7w02e1GFeclmM2Z551OegjNQ87sfKUMIWIUNqZRc/edit?usp=sharing">→スプレッドシート</a>
             <p><strong>5月27日</strong>: 5/27のインタビューメンバーによるZoom議事録をGoogleドキュメントにて共有。</p>
             <p><strong>5月28日</strong>: 村田華蓮氏が質問事項の担当と、WS設計への活用方法について質問。当日の背景説明についても触れる。</p>
             <p><strong>5月30日</strong>: インタビューのエクセルファイルを学生間で共有。城内氏（横浜市デジタル統括本部）が自己紹介の提案。</p>
             <p><strong>5月31日</strong>: フロンテッジ金子氏が文科省のプログラミング教育に関する資料を共有。</p>
+            <a href="https://www.mext.go.jp/a_menu/shotou/zyouhou/detail/1375607.htm">→参考：文部科学省</a>
             <h3>6月</h3>
             <p><strong>6月7日</strong>: 網倉光生氏が5/31日のインタビュー内容を可視化した共起ネットワークを作成。主な課題として、MESH等のプログラミング的思考が算数や理科等の理系科目に偏ること、学校での活用が授業の域を超えないことが挙げられる。「遊び」という要素を取り入れることで、公教育では補い切れないポジションの活用方法が見出せる可能性がある。</p>
             <img src="./images/newplot (6).png">
@@ -51,11 +54,51 @@
     </section>
 
     <section id="trial-ws">
-        <h2>トライアルWSに向けた準び（A班）</h2>
+        <h2>最終トライアルWS（2024.6.28）に向けた準備</h2>
         <article>
             <div class="heading-21">
                 <h1>準備活動</h1>
             </div>
+            <p><strong>6月14日</strong>: ワークショップの進行企画書のエクセルとパワーポイントの提出依頼。SharePointにアクセスできないため、Slackに直接ファイルを添付するよう指示&#8203;:citation[oaicite:2]{index=2}&#8203;。</p>
+            <iframe src="./files/MESH/MESH企画概要.pdf"></iframe>
+            <p><strong>6月17日</strong>: ゼミ生で6/21トライアルWSに向けMTG。（せっかくWS設計に関わらせてもらえるのだから、オリジナリティ求める）
+            <h4>【WSの内容】</h4>
+            <ul>
+            <li>すごろく形式のゲーム型</li>
+            <li>4人1組でチーム</li>
+            <li>5グループで対戦する</li>
+            <li>保護者にコマの役をやっていただく（机の上ではなく、会場全体をすごろくとした時の場合）</li>
+            <li>コマにMESHを使ったアクションを書いておく</li>
+            <li>みんなに遊んでもらう（最後の発表会はない）</li>
+            <li>チュートリアルでMESHの使い方を学ぶ（遊びながら学ぶ！）</li>
+            <li>コマを進めるごとにMESHを使ったアクションの難易度が上がる</li>
+            <li>サイコロは自分たちで作って、1.2.3.1.2.3の6面</li>
+            <li>人生ゲーム式で小学校入学から大学卒業までのアクションを作る</li>
+            <li>ex)嬉しいことあったら◯マス進む</li>
+            <li>アクションをクリアしたグループごとに、どんどんマスを進める</li>
+        </ul>
+            <h4>【個人でやってくること】</h4>
+            <ul>
+                <li>コマを作る（野木、百瀬）</li>
+                <li>サイコロを作る（北川）</li>
+                <li>マス目が書いてあるボードを作る（網倉）</li>
+                <li>パワポとエクセルを変える（全員）</li>
+                <li>警告:明日の17時までにslack送る！警告</li>
+                <li>1人10個のアクションを考える（小学生、中学生、高校生、大学生で3:3:3:1とか、2:2:2:4くらいで考える、大学になるにつれて難易度を上げる→ex)ブロックを3つ組み合わせたもの）</li>
+            </ul>
+            <ul>
+                <li>スタート、ゴールのマスを用意する</li>
+                <li>ex)小学校に入学した→センサーで笑い声を入れよう！簡単なもので！</li>
+                <li>チュートリアルを入れる</li>
+                <li>最初の方にアイスブレイクができるマスを入れる</li>
+            </ul>
+            <p><strong>6月18日</strong>: すごろくの内容を作成し、プレワークショップの進行方法を共有。基本ルールとして、マス目のアクション完了をスタッフが判断することを決定。</p>
+            <p><strong>6月18日</strong>: すごろくマスデータを作成中の問題として、悪天候の影響でラボが早く閉まるため、データ出力が遅れる旨を共有。協力者がデータ加工を手伝うことを申し出る。すごろく駒出力完了</p>
+            <img class="koma" src="./images/mesh/IMG_4792.jpg">
+            <p><strong>6月19日</strong>: トライアルワークショップの進行方法について事前に送付。20分で実施することを再確認し、進行のイメージを添付資料で説明。</p>
+            <p><strong>6月21日</strong>:<b><u>中間トライアルWS日。</u></b></p>
+            <iframe src="./files/MESH/MESHすごろく.pdf"></iframe>
+            <p><strong>6月22日</strong>: 各グループリーダーmesh活用→ @入野果穗（r202202147cs）基礎・アイスブレイク→ @三浦ジェフェルソン天才→ @鳴海明(タクシー会社)で決定。</p>
             <p><strong>6月25日</strong>: Takehiro Hagiwara氏が今週末のワークショップについて、子ども役と保護者役が2人1組で進めることを連絡。</p>
             <p><strong>6月26日</strong>: 網倉光生氏が最終トライアルWSのファシリMTGを6/27 22:30に行うことを提案。</p>
             <p><strong>6月27日</strong>: 最終トライアルWSのファシリMTGを実施。</p>
@@ -65,6 +108,7 @@
             <p><strong>7月5日</strong>: 村田華蓮氏が30分後にZoomミーティングを開始する案内。</p>
         </article>
     </section>
+    
 
     <section id="discussion">
         <h2>全体の議論</h2>
@@ -135,7 +179,8 @@
     </div>
     <div class="reference-link">
   <a href="https://www.kanagawa-u.ac.jp/news/details_27931.html">神奈川大学公式HP（経営学部の学生が「MESH」を活用した児童向けワークショップを開発）</a><br>
-  <a href="https://library.meshprj.com/news/20240626-yokohama-kanagawa-univ-dx-workshop">MESH公式HP（横浜市と神奈川大学の官学連携、次世代DX人材育成『遊びの天才になろう！工作×プログラミングワークショップ』開催）</a>
+  <a href="https://library.meshprj.com/news/20240626-yokohama-kanagawa-univ-dx-workshop">MESH公式HP（横浜市と神奈川大学の官学連携、次世代DX人材育成『遊びの天才になろう！工作×プログラミングワークショップ』開催）</a><br>
+  <a href="https://www.city.yokohama.lg.jp/city-info/koho-kocho/press/digital/2024/0620jisedaiDX.html">横浜市公式HP（神奈川大学との“官学連携”で次世代DX人材を育成　『遊びの天才になろう！工作×プログラミングワークショップ』を開催します！）</a>
 </div>
 </article>
 
