--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#overview">概要</a></li>
                 <li><a href="#interview">インタビューのまとめ</a></li>
-                <li><a href="#trial-ws">トライアルWSに向けた準び（A班）</a></li>
+                <li><a href="#trial-ws">最終トライアルWS（2024.6.28）に向けた準備</a></li>
                 <li><a href="#discussion">全体の議論</a></li>
                 <li><a href="#workshop">ワークショップ当日の様子</a></li>
             </ul>
