--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -97,7 +97,9 @@
             <img class="koma" src="./images/mesh/IMG_4792.jpg">
             <p><strong>6月19日</strong>: トライアルワークショップの進行方法について事前に送付。20分で実施することを再確認し、進行のイメージを添付資料で説明。</p>
             <p><strong>6月21日</strong>:<b><u>中間トライアルWS日。</u></b></p>
-            <iframe src="./files/MESH/MESHすごろく.pdf"></iframe>
+            <iframe src="./files/MESH/MESHすごろく.pdf"></iframe><br>
+            <iframe src="./files/MESH/MESHすごろく企画概要.pdf"></iframe>
+
             <p><strong>6月22日</strong>: 各グループリーダーmesh活用→ @入野果穗　基礎・アイスブレイク→ @三浦ジェフェルソン　天才→ @鳴海明(タクシー会社)で決定。</p>
             <p><strong>6月25日</strong>: Takehiro Hagiwara氏が今週末のワークショップについて、子ども役と保護者役が2人1組で進めることを連絡。</p>
             <p><strong>6月26日</strong>: 網倉光生氏が最終トライアルWSのファシリMTGを6/27 22:30に行うことを提案。</p>
