--- a/doyolab/mesh.html
+++ b/doyolab/mesh.html
@@ -28,7 +28,8 @@
 
     <section id="overview">
         <h2>概要</h2>
-        <p>このページは、横浜市と神奈川大学が共同で開催する「遊びの天才になろう！工作×プログラミングワークショップ」についての情報をまとめたものです。次世代DX人材育成を目指し、工作とプログラミングを通じて学びと遊びを融合させたユニークな体験を提供します。</p>
+        <p>このページは、横浜市と神奈川大学が共同で開催する「遊びの天才になろう！工作×プログラミングワークショップ」についての情報をまとめた。次世代DX人材育成を目指し、工作とプログラミングを通じて学びと遊びを融合させたユニークな体験を提供する。<br>
+            DX 推進を進める横浜市とSONY グループと協業し、小学校の教員などへの問題意識の調査等も行いながら、SONY のMESH という製品を使って次世代のDX 人材育成のためのワークショップを開発し、実践した。今後、オープンソースとして公開していく予定である。</p>
     </section>
 
     <section id="interview">
