--- a/doyolab/SEAds.html
+++ b/doyolab/SEAds.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="#home">ホーム</a></li>
                 <li><a href="#overview">概要</a></li>
-                <li><a href="#posts">投稿</a></li>
+                <li><a href="#profile">投稿</a></li>
             </ul>
         </nav>
     </header>
@@ -70,6 +70,8 @@
                 </div>
                 <div>
                     <h2>個人アカウントの投稿</h2>
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D452409487833536%26id%3D100091934651977&show_text=true&width=500" width="500" height="846" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D405100489231103%26id%3D100091934651977&show_text=true&width=500" width="500" height="644" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D404356432638842%26id%3D100091934651977&show_text=true&width=500" width="500" height="709" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
