--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </li>
             <li>
                 <a href="./doyolab/index.html">
-                <img class="doyolab" src="./images/comingsoon.png"></a>
+                <img class="doyolab" src="./images/IMG_2762.png"></a>
                 <dl>
                     <dt>道用ゼミ</dt>
                     <dd></dd>
