--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 <body>
-   <!-- 
+   
     <div id="volunteerModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
@@ -41,7 +41,7 @@
           <img class="modal-image" src="./images/SEAds rogo.jpg">
         </div>
       </div>
-    -->
+    
     <header class="header">
         <div class="header-inner">
             <a class="header img" href="./index.html">
@@ -71,8 +71,7 @@
     </div>
     <div class="lead">
         <p>私、あみくらと申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
-            <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。
-        </p>
+            <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。</p>
     </div>
 
 
