--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
 
 </head>
 <body>
-   
+   <!--
     <div id="volunteerModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
           <h2>ワークショップボランティア募集！</h2>
           <p>親子向けものづくりワークショップのお手伝いを募集しています！</p>
-          <button class="button-54" onclick="location.href='https://forms.gle/hpYhKfaebaSNXVYHA'">お申し込みはこちら</button>
+          <button class="button-54" onclick="location.href='https:forms.gle/hpYhKfaebaSNXVYHA'">お申し込みはこちら</button>
           <img class="modal-image" src="./images/SEAds rogo.jpg">
         </div>
       </div>
+    -->
     
     <header class="header">
         <div class="header-inner">
